[workspace]
members = ["ssstar", "ssstar-cli", "ssstar-testing"]

[workspace.package]
authors       = ["Adam Nelson <adam@elastio.com>"]
categories    = ["command-line-utilities", "filesystem"]
documentation = "https://github.com/elastio/ssstar"
edition       = "2021"
homepage      = "https://github.com/elastio/ssstar"
keywords      = ["tar", "s3", "archive"]
license       = "Apache-2.0 OR MIT"
readme        = "README.md"
repository    = "https://github.com/elastio/ssstar"
version       = "0.4.4-dev"

[workspace.dependencies]
again                    = "0.1.2"
assert_matches           = "1.5.0"
async-trait              = "0.1"
aws-config               = "0.55"
aws-credential-types     = { version = "0.55", features = ["hardcoded-credentials"] }
aws-sdk-s3               = { version = "0.27.0", features = ["rt-tokio"] }
aws-smithy-client        = "0.55"
aws-smithy-http          = "0.55"
aws-smithy-http-tower    = "0.55"
aws-smithy-types         = "0.55"
aws-smithy-types-convert = { version = "0.55", features = ["convert-chrono"] }
aws-types                = { version = "0.55", features = [] }
base64                   = "0.21.0"
byte-unit                = { version = "4" }
bytes                    = "1.4.0"
chrono                   = "0.4.22"
clap                     = { version = "4", features = ["derive"] }
color-eyre               = "0.6.2"
digest                   = "0.10.3"
dirs                     = "4.0.0"
dotenv                   = "0.15.0"
dotenv_codegen           = "0.15.0"
duct                     = "0.13.5"
dyn-clone                = "1.0.9"
futures                  = "0.3"
glob                     = "0.3"
http                     = "0.2"
indicatif                = "0.17.3"
itertools                = "0.10"
more-asserts             = "0.3.1"
once_cell                = "1"
rand                     = "0.8"
regex                    = "1.7.1"
sha2                     = "0.10.6"
snafu                    = { version = "0.7", features = ["futures"] }
strum                    = { version = "0.24", features = ["derive"] }
tar                      = "0.4"
tempdir                  = "0.3"
tokio                    = { version = "1", features = ["full"] }
tokio-stream             = "0.1"
tokio-util               = { version = "0.7", features = ["io", "io-util"] }
tower                    = "0.4"
tracing                  = "0.1"
tracing-appender         = "0.2"
tracing-subscriber       = { version = "0.3", features = ["env-filter", "fmt", "local-time"] }
tracing-test             = "0.2.4"
typenum                  = "1.15.0"
url                      = "2.3"
vergen                   = "7"
walkdir                  = "2"
which                    = "4"
