[package]
name = "ssstar-cli"
version = "0.4.3-dev"
edition = "2021"
authors = ["Adam Nelson <adam@elastio.com>"]
description = """
Tar-like archive utility that creates and restores tar-compatible archives to and from S3 or S3-compatible storage.  ssstar is specifically designed to stream both input and output data so memory usage is minimal, while aggressive concurrency is used to maximize network throughput.
"""
documentation = "https://github.com/elastio/ssstar"
homepage = "https://github.com/elastio/ssstar"
repository = "https://github.com/elastio/ssstar"
keywords = ["tar", "s3", "archive"]
categories = ["command-line-utilities", "filesystem"]
license = "Apache-2.0 OR MIT"
readme = "../README.md"

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
# All crates share the same version and should be incremented together
shared-version = true

[[bin]]
bench = false
path = "src/main.rs"
name = "ssstar"

[dependencies]
ssstar = {version = "0.4.3-dev", path = "../ssstar", features = ["clap"] }
clap = { version = "4.1.6", features = ["derive","wrap_help"] }
url = "2.3.0"
byte-unit = "4.0.14"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "local-time"] }
tracing = "0.1.36"
tokio = { version = "1.25.0", features = ["full"] }
color-eyre = "0.6.2"
futures = "0.3.26"
indicatif = "0.17.3"

[build-dependencies]
vergen = "8.1.1"
