[package]
authors = { workspace = true }
categories = { workspace = true }
description = """
Tar-like archive utility that creates and restores tar-compatible archives to and from S3 or S3-compatible storage.  ssstar is specifically designed to stream both input and output data so memory usage is minimal, while aggressive concurrency is used to maximize network throughput.
"""
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "ssstar-cli"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.release]
# All crates share the same version and should be incremented together
shared-version = true

[[bin]]
bench = false
name  = "ssstar"
path  = "src/main.rs"

[dependencies]
byte-unit          = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
color-eyre         = { workspace = true }
futures            = { workspace = true }
indicatif          = { workspace = true }
ssstar             = { version = "0.4.4-dev", path = "../ssstar", features = ["clap"] }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }

[build-dependencies]
vergen = { workspace = true }
