[package]
name = "ssstar-testing"
version = "0.2.1-dev"
edition = "2021"
authors = ["Adam Nelson <adam@elastio.com>"]
description = """
Library of testing helpers to make it easier to write test fixtures.

Not for use outside of ssstar crate.  Breaking changes may ocurr without warning.
"""
documentation = "https://github.com/elastio/ssstar"
homepage = "https://github.com/elastio/ssstar"
repository = "https://github.com/elastio/ssstar"
keywords = ["tar", "s3", "archive"]
categories = ["command-line-utilities", "filesystem"]
license = "Apache-2.0 OR MIT"

[badges]
maintenance = { status = "experimental" }

[package.metadata.release]
# All crates share the same version and should be incremented together
shared-version = true

[dependencies]
again = "0.1.2"
aws-config = "0.47.0"
aws-sdk-s3 = { version = "0.17.0" }
aws-types = { version = "0.49.0", features = ["hardcoded-credentials"] }
base64 = "0.13.0"
byte-unit = "4.0.14"
bytes = "1.2.1"
color-eyre = "0.6.2"
digest = "0.10.3"
dirs = "4.0.0"
duct = "0.13.5"
futures = "0.3.24"
http = "0.2.8"
once_cell = "1.13.1"
rand = "0.8.5"
regex = "1.6.0"
sha2 = "0.10.2"
strum = { version = "0.24.1", features = ["derive"] }
tar = "0.4.38"
tempdir = "0.3.7"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io", "io-util"] }
tracing = "0.1.36"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.15"
tracing-test = "0.2.3"
typenum = "1.15.0"
url = "2.2.2"
walkdir = "2.3.2"
which = "4.2.5"
