[package]
authors = { workspace = true }
categories = { workspace = true }
description = """
Library of testing helpers to make it easier to write test fixtures.

Not for use outside of ssstar crate.  Breaking changes may ocurr without warning.
"""
documentation = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
name = "ssstar-testing"
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[badges]
maintenance = { status = "experimental" }

[package.metadata.release]
# All crates share the same version and should be incremented together
shared-version = true

[dependencies]
again                = { workspace = true }
aws-config           = { workspace = true }
aws-credential-types = { workspace = true }
aws-sdk-s3           = { workspace = true }
aws-types            = { workspace = true }
base64               = { workspace = true }
byte-unit            = { workspace = true }
bytes                = { workspace = true }
color-eyre           = { workspace = true }
digest               = { workspace = true }
dirs                 = { workspace = true }
duct                 = { workspace = true }
futures              = { workspace = true }
http                 = { workspace = true }
once_cell            = { workspace = true }
rand                 = { workspace = true }
regex                = { workspace = true }
sha2                 = { workspace = true }
tar                  = { workspace = true }
tempfile             = { workspace = true }
tokio                = { workspace = true }
tokio-util           = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
typenum              = { workspace = true }
url                  = { workspace = true }
walkdir              = { workspace = true }
which                = { workspace = true }
